# cortex-staking-api

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.local.yml
crates/api/: Cargo.toml
crates/api/src/: app.rs  config.rs  lib.rs  main.rs  state.rs
crates/api/src/docs/: admin.rs  health.rs  mod.rs  monad.rs
crates/api/src/extractors/: auth.rs
crates/api/src/routes/: admin.rs  health.rs  mod.rs  monad.rs
crates/api/tests/: auth_routes.rs
crates/auth/: Cargo.toml
crates/auth/src/: extractor.rs  lib.rs  model.rs
crates/chains/monad/: Cargo.toml
crates/core/: Cargo.toml
crates/db/: Cargo.toml
crates/db/src/: auth_repository.rs
dev/: seed_dev.sql
migrations/: 0001_create_auth_schema.sql  schema.md
skills/: 01-project-initialization.md  02-api-architecture.md  03-auth-and-api-keys.md  04-routes-and-scopes.md  05-chain-adapter-design.md  06-database-design.md  07-error-handling.md  08-observability-and-logging.md  09-security-rules.md  10-testing-and-ci.md  README.md
