[package]
name = "cortex-staking-api"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

cortex-core = { path = "../core" }
cortex-auth = { path = "../auth" }
cortex-db = { path = "../db" }
cortex-chain-monad = { path = "../chains/monad" }