[package]
name = "cortex-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web.workspace = true
chrono.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
