[package]
name = "cortex-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true