[package]
name = "cortex-db"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
sqlx.workspace = true
uuid.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

cortex-auth = { path = "../auth" }
cortex-core = { path = "../core" }